--- a/kibelezaTi16Joyce.csproj
+++ b/kibelezaTi16Joyce.csproj
@@ -163,8 +163,17 @@
       <DependentUpon>13-ajuda.cs</DependentUpon>
     </Compile>
     <Compile Include="banco.cs" />
+    <Compile Include="MeuCalendario.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reserva.Designer.cs">
+      <DependentUpon>Reserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="variaveis.cs" />
     <EmbeddedResource Include="01-Login.resx">
       <DependentUpon>01-Login.cs</DependentUpon>
@@ -215,6 +224,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reserva.resx">
+      <DependentUpon>Reserva.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
