--- a/kibelezaTi16Joyce.csproj
+++ b/kibelezaTi16Joyce.csproj
@@ -163,6 +163,7 @@
       <DependentUpon>13-ajuda.cs</DependentUpon>
     </Compile>
     <Compile Include="banco.cs" />
+    <Compile Include="ftp.cs" />
     <Compile Include="MeuCalendario.cs">
       <SubType>Component</SubType>
     </Compile>
